Closed Bug 16145 Opened 25 years ago Closed 25 years ago

[DOGFOOD][PP] Save attachment pop-up is missing on Mac -> can't save

Categories

(SeaMonkey :: MailNews: Message Display, defect, P3)

PowerPC
Mac System 8.5
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: pmock, Assigned: jefft)

References

Details

(Whiteboard: [PDT+])

Attachments

(1 file)

Build Date & Platform Bug Found:
  Mac mozilla seamonkey build 1999-10-11-14-m11 installed on PPC G3/400 OS 8.5.1

Overview Description:
  On the Mac, the save attachment pop up is missing from the message header.
When you have an attachment to a message, there is suppose to have an save
attachment icon on the message header.  There appears no way to save the
attachment.  The only icon on the Mac message header is the address book icon.
  On Linux, there is a save attachment icon.  I have not tried Win32 yet.

Steps to Reproduce:
0) Delete my mozilla registry and previous user 5.0 profile
1) Double click on the icon 'mozilla installer'
   The migration wizard should appear
2) Select a 4.x profile to migrate and click on the start button
   I selected a single IMAP 4.x profile to migrate
   Apprunner should launch and the browser window should appear
3) Open Messenger
4) Expand the list of IMAP folder
   The Inbox should appear
5) Select the Inbox
   The password prompt should appear
6) Enter password and log in
7) Select a message that has a file attachment
   I selected a message that had only 1 file attachment.  This attachment was
sent from Win98 running 4.7 RTM build.
   The message should display
   Notice that the save attachment icon is missing.

Actual Results:

There is no save attachment icon on the message header.  There si nothing to
click on to bring up the save attachment dialog

Expected Results:
 I should be able to click on the save attachment icon on the message header to
bring up the pop up dialog which will allow me to save the attachment.

Additional Builds and Platforms Tested On:
 This problem does not occur on Linux commercial seamonkey build
1999-10-14-11-M11.  I have not tried Win32 build yet, but on Jeff Tasi debug
build, there was a save attachment popup on the message header
menu bar.

Additional Information:
 Mac commercial build was not available.  In my tests, I was running under IMAP.
Blocks: 10803
Summary: [PP] Save attachment pop-up is missing on Mac -> can't save → [DOGFOOD][PP] Save attachment pop-up is missing on Mac -> can't save
Nominate for dogfood
QA Contact: lchiang → pmock
Changing qa assigned to myself.

On the Oct 13 commercial Linux and Win32 builds, the attachment menu envelope is
present and functional.  The Mac is still missing the attachment button.

ftp://sweetlou/products/client/seamonkey/unix/linux_glibc/2.2/x86/1999-10-13-12-M11/netscape-i686-pc-linux-gnu.tar.gz
ftp://sweetlou/products/client/seamonkey/windows/32bit/x86/1999-10-13-13-M11/base.xpi
ftp://sweetlou/products/client/seamonkey/macos/8.x/ppc/1999-10-13-08-M11/netscape5-mac-M11.sea.bin
Whiteboard: [PDT+]
Putting on [PDT+] radar.
This is actually a layout bug not a problem with mail/news. I generated the
acutual XUL file that is being displayed and it show the attachment menu fine
on Win32 and Linux, but on Mac, it's not there.

I will attach the XUL to this file and reassign.

- rhp
Assignee: rhp → rickg
Hi Rick,
The attached XUL file doesn't render properly on Mac (works fine on Linux and
Win32).

- rhp
Assignee: rickg → hyatt
I'm forwarding to Hyatt; He can diagnose XUL problems much faster than I can.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → INVALID
Of course it didn't display. The XUL contains a menubar! Menu bars won't show up
on the Mac.  The XUL should just contain a menu without a menu bar.

Marking INVALID.
Status: RESOLVED → REOPENED
Resolution: INVALID → ---
I spoke to Hyatt briefly in the hall way.  He confirmed that this is XUL problem
and that this bug can be reopen and re-assigned to the person who maintain the
mailnews XUL files.  It believe that maybe Paul Hangas.

Paul, if you are not the right person, can you re-assign?
Clearing resolution
Assignee: hyatt → hangas
Status: REOPENED → NEW
Assignee: hangas → jefft
Reassign to me. I have a fix for it.
Status: NEW → ASSIGNED
The fix is really easy. As pointed out by hyatt, simply remove the obsolete
menubar tag everything works like a charm.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Target Milestone: M11
nsMimeXULEmitter.cpp changed.
Status: RESOLVED → VERIFIED
Verified on Mac commercial build
ftp://sweetlou/products/client/seamonkey/macos/8.x/ppc/1999-10-21-09-M11/netscape5-mac-M11.sea.bin

The pop-up is visible and allows me to save an attachment.
Verified as fixed :-)
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: