removed obsolete menubar xul tag; fixed bug 16145; r=rhp, ducarroz; a=dp